Fix align block

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -11,6 +11,11 @@ fluid-media() //care flex box image
 //rupture.scale-names = 'xs' 's' 'm' 'l' 'xl' 
 jeet.gutter = 1
 
+.mewtwo-hotels-container form
+	display: flex!important;
+	align-items:flex-end!important;
+	flex-wrap:wrap!important;
+
 .allpage
 	background #eee
 	wraper
@@ -1951,6 +1956,7 @@ hr
 .help-top-wraper
 	flexB(between)
 	fw()
+	align-items flex-start
 .help-top-el
 	+below(768px)
 		width 100%
